# vibe_show

./: .gitignore  .jscpd.json  .prettierrc  BRAND_GUIDE.md  CLAUDE.md  eslint.config.js  index.html  knip.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
agent-sidecar/: esbuild.config.mjs  package.json  tsconfig.json
agent-sidecar/scripts/: build-compiled.mjs
agent-sidecar/src/: agent.ts  index.ts  mcp-tools.ts  system-prompt.ts  vibelights-client.ts
branding/: preview.html
docs/: CLI.md
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts  vibelights-client.ts
scripts/: download-uv.ps1  download-uv.sh  prebuild.mjs
src/: App.tsx  commandMap.ts  commands.ts  constants.ts  events.ts  index.css  main.tsx  screens.ts  types.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/bindings/: AddEffectParams.ts  AddTrackParams.ts  AnalysisFeatures.ts  AnalysisSummary.ts  AnalyzeAudioParams.ts  AppError.ts  AppSettings.ts  AudioAnalysis.ts  BatchAction.ts  BatchEditParams.ts  BeatAnalysis.ts  BeatsInRange.ts  BlendMode.ts  BulbShape.ts  CancelOperationParams.ts  ChannelOrder.ts  ChatHistoryEntry.ts  ChatMode.ts  ChatRole.ts  CheckVixenPreviewFileParams.ts  ChordEvent.ts  Color.ts  ColorGradient.ts  ColorMode.ts  ColorModel.ts  ColorStop.ts  Command.ts  CommandCategory.ts  CommandOutput.ts  CommandResponse.ts  CommandResult.ts  CompileScriptParams.ts  CompileScriptPreviewParams.ts  Controller.ts  ControllerId.ts  ControllerProtocol.ts  ConversationIdParams.ts  ConversationSummary.ts  CreateProfileParams.ts  CreateSequenceParams.ts  (+128 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/python/: requirements-gpu.txt  requirements.txt  sidecar.py
src-tauri/resources/python/analyzers/: beats.py  drums.py  features.py  harmony.py  lyrics.py  mood.py  pipeline.py  pitch.py  stems.py  structure.py  vocals.py
src-tauri/src/: agent.rs  analysis.rs  api.rs  audit.rs  chat.rs  commands.rs  demo.rs  describe.rs  dispatcher.rs  error.rs  events.rs  lib.rs  llm.rs  main.rs  paths.rs  profile.rs  progress.rs  project.rs  python.rs  settings.rs  setup.rs  state.rs  util.rs
src-tauri/src/dsl/: ast.rs  builtins.rs  compiler.rs  error.rs  lexer.rs  mod.rs  optimize.rs  parser.rs  typeck.rs  vm.rs
src-tauri/src/effects/: chase.rs  fade.rs  gradient.rs  mod.rs  rainbow.rs  script.rs  solid.rs  strobe.rs  twinkle.rs  wipe.rs
src-tauri/src/engine/: evaluator.rs  mixer.rs  mod.rs
src-tauri/src/import/: mod.rs  vixen.rs  vixen_preview.rs
src-tauri/src/import/vixen/: constants.rs  effects.rs  importer.rs  mod.rs  preview.rs  types.rs
src-tauri/src/model/: analysis.rs  color.rs  color_gradient.rs  curve.rs  easing.rs  fixture.rs  mod.rs  motion_path.rs  show.rs  timeline.rs
src-tauri/src/registry/: catalog.rs  execute.rs  mod.rs  params.rs  reference.rs  validation.rs
src-tauri/src/registry/handlers/: agent.rs  analysis.rs  chat.rs  common.rs  edit.rs  global_lib.rs  hot.rs  import.rs  library.rs  media.rs  mod.rs  playback.rs  profile.rs  profile_lib.rs  python.rs  query.rs  script.rs  sequence.rs  settings.rs  setup.rs
src/components/: AnalysisWizard.tsx  AnalysisWorkspace.tsx  AppBar.tsx  ChatPanel.tsx  CollapsibleListEditor.tsx  ConfirmDialog.tsx  CurveEditorDialog.tsx  Dropdown.tsx  EffectBlock.tsx  EffectPicker.tsx  ErrorBoundary.tsx  FixtureList.tsx  GradientEditorDialog.tsx  ImportWizard.tsx  LibraryPanel.tsx  ModalBackdrop.tsx  NavBar.tsx  Preview.tsx  PreviewToolbar.tsx  ProgressOverlay.tsx  PropertyPanel.tsx  PythonSetupWizard.tsx  ScreenShell.tsx  ScriptEditorDialog.tsx  SequenceSettingsDialog.tsx  TabBar.tsx  Timeline.tsx  Toolbar.tsx  ViewMenu.tsx  Wordmark.tsx
src/components/controls/: BoolToggle.tsx  ColorInput.tsx  ColorListEditor.tsx  ColorPicker.tsx  CurveEditor.tsx  FloatSlider.tsx  GradientEditor.tsx  IntSlider.tsx  SelectInput.tsx  index.ts
src/components/house/: FixtureEditor.tsx  GroupEditor.tsx  HouseTree.tsx
src/components/layout/: FixturePlacer.tsx  LayoutCanvas.tsx  LayoutToolbar.tsx  ShapeConfigurator.tsx
src/components/script/: ParameterPlayground.tsx  ScriptBrowser.tsx  ScriptEditor.tsx  ScriptPreview.tsx
src/dock/: DockLayout.tsx  HeaderActions.tsx  panelIds.ts  persistence.ts  registry.ts
src/dock/contexts/: EditorContext.tsx  editorStore.ts
src/dock/layouts/: editorLayout.ts
src/dock/panels/: DockableLibraryPanel.tsx  DockablePropertyPanel.tsx  DockableTimeline.tsx  registerEditorPanels.ts
src/dock/popout/: PopoutPanelHost.tsx
src/editor/: vibelights-lang.ts
src/hooks/: useAnalysis.ts  useAudio.ts  useDebounce.ts  useEffectActions.ts  useEffectEditing.ts  useEngine.ts  useKeyboard.ts  usePreviewCamera.ts  usePreviewRenderer.ts  usePreviewSettings.ts  usePreviewWindow.ts  useProgress.ts  useResizablePanel.ts  useSaveState.ts  useScriptPreview.ts  useScrollSync.ts  useShowVersion.ts  useTauriListener.ts  useTimelineDrag.ts  useToast.tsx  useTransportControls.ts  useUISettings.ts
src/screens/: AnalysisScreen.tsx  DetachedPreview.tsx  EditorScreen.tsx  FirstLaunchScreen.tsx  HomeScreen.tsx  LoadingScreen.tsx  ProfileScreen.tsx  ScriptScreen.tsx  SettingsScreen.tsx
src/screens/profile/: CurvesTab.tsx  EffectsTab.tsx  GradientsTab.tsx  HouseSetupTab.tsx  LayoutTab.tsx  MusicTab.tsx
src/screens/setup/: CurvesTab.tsx  EffectsTab.tsx  GradientsTab.tsx  HouseSetupTab.tsx  LayoutTab.tsx  MusicTab.tsx  SequencesTab.tsx
src/utils/: colorUtils.ts  cssZoom.ts  drawWaveform.ts  effectKey.test.ts  effectKey.ts  formatError.test.ts  formatError.ts  formatTime.test.ts  formatTime.ts  layoutConstants.ts  layoutShapes.ts  paramAccess.ts  sectionColor.ts  timelineConstants.ts  timelineLayout.ts  validators.test.ts  validators.ts  waveform.ts
