[package]
name = "vibe_lights"
version = "0.1.0"
edition = "2021"
default-run = "vibe_lights"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-build"]

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
ts-rs = { version = "12", features = ["no-serde-warnings"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[[bin]]
name = "vibe_lights"
path = "src/main.rs"
required-features = ["tauri-app"]

[[bin]]
name = "vibelights-cli"
path = "src/bin/cli.rs"
