[package]
name = "vibe_lights"
version = "0.1.0"
edition = "2021"
default-run = "vibe_lights"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-build"]

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
ts-rs = { version = "12", features = ["no-serde-warnings"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking", "stream"], default-features = false }
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
schemars = "0.8"
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[[bin]]
name = "vibe_lights"
path = "src/main.rs"
required-features = ["tauri-app"]

[[bin]]
name = "vibelights-cli"
path = "src/bin/cli.rs"

[lints.clippy]
# Prevent runtime panics — all of these abort the process
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "warn"  # warn-only: Tauri's #[tauri::command] macro generates unreachable!()
indexing_slicing = "deny"
# Additional strictness
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
# Pedantic — elevated subset of useful lints
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides — allow lints that are pure style with no bug-catching value
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
similar_names = "allow"           # dist/dest, pos/prev etc. are fine for local vars
many_single_char_names = "allow"  # needed for math (color matrices, base64)
items_after_statements = "allow"  # Rust allows this; pure style preference
redundant_else = "allow"          # pure style
semicolon_if_nothing_returned = "allow"  # pure style
